Update Style For Firefox 2.0

--- a/elements/folder.html
+++ b/elements/folder.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, user-scalable=no" />
-	<title>File Manager</title>
+	<title>Files</title>
 	
 	<link rel="stylesheet" href="../libraries/buildingblocks/style/action_menu.css" />
 	<link rel="stylesheet" href="../libraries/buildingblocks/style/confirm.css">
