--- a/libraries/buildingblocks/style/action_menu/header_actions.html
+++ b/libraries/buildingblocks/style/action_menu/header_actions.html
@@ -12,6 +12,7 @@
     -->
   <style type="text/css">
     html, body {
+      font-family: sans-serif;
       margin: 0;
       padding: 0;
       font-size: 10px;
@@ -23,6 +24,13 @@
   </style>
 </head>
 <body role="application">
+  <p dir="ltr">
+    <label>
+      <input type="checkbox"
+        onchange="document.documentElement.dir = this.checked ? 'rtl' : 'ltr'">
+      RTL mode
+    </label>
+  </p>
 
   <form role="dialog" data-type="action" onsubmit="return false;">
     <header>
@@ -33,7 +41,7 @@
       <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h1>
     </header>
     <section>
-      Curabitur condimentum diam mollis lacus hendrerit congue. Phasellus porttitor orci elit, ac consequat est mollis ut. Ut consequat ipsum a ullamcorper aliquam.
+      <p>Curabitur condimentum diam mollis lacus hendrerit congue. Phasellus porttitor orci elit, ac consequat est mollis ut. Ut consequat ipsum a ullamcorper aliquam.</p>
     </section>
   </form>
 </body>
