--- a/libraries/buildingblocks/style/action_menu/index.html
+++ b/libraries/buildingblocks/style/action_menu/index.html
@@ -12,6 +12,7 @@
     -->
   <style type="text/css">
     html, body {
+      font-family: sans-serif;
       margin: 0;
       padding: 0;
       font-size: 10px;
@@ -23,6 +24,13 @@
   </style>
 </head>
 <body role="application">
+  <p dir="ltr">
+    <label>
+      <input type="checkbox"
+        onchange="document.documentElement.dir = this.checked ? 'rtl' : 'ltr'">
+      RTL mode
+    </label>
+  </p>
 
   <form role="dialog" data-type="action" onsubmit="return false;">
     <header>Title</header> <!-- this header is optional -->
