--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<a id="back" href="#">
 				<span class="icon icon-back">back</span>
 			</a>
-			<h1 id="folder"></h1>
+			<h1 id="folder" data-l10n-id="files"></h1>
 		</header>
 	</section>
 	
@@ -126,7 +126,7 @@
 				<p>
 					<strong><span data-l10n-id="size">Size</span></strong><span id="file-size"></span><br />
 					<strong><span data-l10n-id="last-updated">Last updated</span></strong><span id="file-modified"></span><br />
-					<strong><span data-l10n-id="type">Type</span></strong><span id="file-type"></span>
+					<strong><span data-l10n-id="type">Type</span></strong><span id="file-type"></span><br />
 					<strong><span data-l10n-id="absolute-path">Absolute path</span></strong><span id="absolute-path"></span>
 				</p>
 			</section>
@@ -157,4 +157,3 @@
 	<script type="text/javascript" defer src="js/app.js"></script>
 </body>
 </html>
-
