--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-    <meta name='theme-color' content='#FF8112'>
+    <meta name='theme-color' content='#FF7E17'>
 	<meta name="viewport" content="width=device-width, user-scalable=no" />
 	<title>Files</title>
 	
