--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-    <meta name='theme-color' content='#FF7E17'>
+    <meta name='theme-color' content='#f97c17'>
 	<meta name="viewport" content="width=device-width, user-scalable=no" />
 	<title>Files</title>
 	
@@ -59,7 +59,7 @@
 			<a id="back" href="#">
 				<span class="icon icon-back">back</span>
 			</a>
-			<h1 id="folder" data-l10n-id="files"></h1>
+			<h1 id="folder" data-l10n-id="files">Files</h1>
 		</header>
 	</section>
 	
