Third (and last) Real Update

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<a id="back" href="#">
 				<span class="icon icon-back">back</span>
 			</a>
-			<h1 id="folder" data-l10n-id="files">Files</h1>
+			<h1 id="folder" data-l10n-id="files"></h1>
 		</header>
 	</section>
 	
