--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-    <meta name='theme-color' content='#f97c17'>
+    	<meta name='theme-color' content='#ff7d14'>
 	<meta name="viewport" content="width=device-width, user-scalable=no" />
 	<title>Files</title>
 	
