--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   
 	<section id="details" data-position="back" class="fullscreen">
 		<form role="dialog" data-type="confirm">
-			<section id="data">
+			<section class="data">
 				<h1 id="file-name"></h1>
 				<p>
 					<strong><span data-l10n-id="size">Size</span></strong><span id="file-size"></span><br />
@@ -165,7 +165,6 @@
 	<script src="js/files.js"></script>
 	<script src="js/storage.js"></script>
 	<script src="js/app.js"></script>
-	<script src="js/search.js"></script>
 	<script src="libraries/jquery.js"></script>
 	<script src="libraries/jquery.searcher.js"></script>
 </body>
