--- a/index.html
+++ b/index.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8" />
+	<meta charset="utf-8">
     	<meta name='theme-color' content='#ff7d14'>
-	<meta name="viewport" content="width=device-width, user-scalable=no" />
+	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<title>Files</title>
 	
-	<link rel="stylesheet" href="libraries/buildingblocks/style/action_menu.css" />
-	<link rel="stylesheet" href="libraries/buildingblocks/style/confirm.css" />
-	<link rel="stylesheet" href="libraries/buildingblocks/style/headers.css" />
+	<link rel="stylesheet" href="libraries/buildingblocks/style/action_menu.css">
+	<link rel="stylesheet" href="libraries/buildingblocks/style/confirm.css">
+	<link rel="stylesheet" href="libraries/buildingblocks/style/headers.css">
 	<link rel="stylesheet" href="libraries/buildingblocks/style/status.css" />
-	<link rel="stylesheet" href="libraries/buildingblocks/style_unstable/lists.css" />
-	<link rel="stylesheet" href="libraries/buildingblocks/style_unstable/scrolling.css" />
-	<link rel="stylesheet" href="libraries/buildingblocks/style_unstable/progress_activity.css" />
+	<link rel="stylesheet" href="libraries/buildingblocks/style_unstable/lists.css">
+	<link rel="stylesheet" href="libraries/buildingblocks/style_unstable/scrolling.css">
+	<link rel="stylesheet" href="libraries/buildingblocks/style_unstable/progress_activity.css">
 
-	<link rel="stylesheet" href="libraries/buildingblocks/icons/styles/action_icons.css" />
+	<link rel="stylesheet" href="libraries/buildingblocks/icons/styles/action_icons.css">
 
-	<link rel="stylesheet" href="libraries/buildingblocks/transitions.css" />
+	<link rel="stylesheet" href="libraries/buildingblocks/transitions.css">
   
-	<link rel="stylesheet" href="libraries/buildingblocks/util.css" />
-	<link rel="stylesheet" href="libraries/buildingblocks/fonts.css" />
+	<link rel="stylesheet" href="libraries/buildingblocks/util.css">
+	<link rel="stylesheet" href="libraries/buildingblocks/fonts.css">
 
-	<link rel="stylesheet" href="libraries/buildingblocks/cross_browser.css" />
+	<link rel="stylesheet" href="libraries/buildingblocks/cross_browser.css">
 
-	<link rel="stylesheet" href="libraries/buildingblocks/extra.css" />
+	<link rel="stylesheet" href="libraries/buildingblocks/extra.css">
 	
-	<link rel="stylesheet" href="css/sidebar.css" />
-	<link rel="stylesheet" href="css/icons.css" />
-	<link rel="stylesheet" href="css/app.css" />
+	<link rel="stylesheet" href="css/sidebar.css"aaaa>
+	<link rel="stylesheet" href="css/icons.css">
+	<link rel="stylesheet" href="css/app.css">
 	
-	<link rel="prefetch" type="application/l10n" href="locales/locales.ini" />
+	<link rel="prefetch" type="application/l10n" href="locales/locales.ini">
 </head>
 <body>
 	<section data-type="sidebar">
@@ -149,23 +149,23 @@
 	
 	<section id="loading" data-position="back" class="shown">
 		<div id="loading-container">
-			<img id="loading-image" src="images/icon.png" alt="Logo" />
+			<img id="loading-image" src="images/icon.png" alt="Logo"/>
 			<div id="loading-bar">
 				<progress id="loading-progress" value="0"></progress>
 			</div>
 			<div id="loading-message"></div>
 		</div>
 	</section>
-	<script src="libraries/l10n.js"></script>
-	<script src="libraries/date.format.js"></script>
-	<script src="libraries/buildingblocks/js/status.js"></script>
-	<script src="js/config.js"></script>
-	<script src="js/mime.js"></script>
-	<script src="js/util.js"></script>
-	<script src="js/files.js"></script>
-	<script src="js/storage.js"></script>
-	<script src="js/app.js"></script>
-	<script src="libraries/jquery.js"></script>
-	<script src="libraries/jquery.searcher.js"></script>
+	<script defer src="libraries/l10n.js"></script>
+	<script defer src="libraries/date.format.js"></script>
+	<script defer src="libraries/buildingblocks/js/status.js"></script>
+	<script defer src="js/config.js"></script>
+	<script defer src="js/mime.js"></script>
+	<script defer src="js/util.js"></script>
+	<script defer src="js/files.js"></script>
+	<script defer src="js/storage.js"></script>
+	<script defer src="js/app.js"></script>
+	<script defer src="libraries/jquery.js"></script>
+	<script defer src="libraries/jquery.searcher.js"></script>
 </body>
 </html>
