--- a/elements/folder.html
+++ b/elements/folder.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, user-scalable=no" />
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<title>Files</title>
 	
-	<link rel="stylesheet" href="../libraries/buildingblocks/style/action_menu.css" />
+	<link rel="stylesheet" href="../libraries/buildingblocks/style/action_menu.css">
 	<link rel="stylesheet" href="../libraries/buildingblocks/style/confirm.css">
-	<link rel="stylesheet" href="../libraries/buildingblocks/style/headers.css" />
-	<link rel="stylesheet" href="../libraries/buildingblocks/style/status.css" />
-	<link rel="stylesheet" href="../libraries/buildingblocks/style_unstable/lists.css" />
-	<link rel="stylesheet" href="../libraries/buildingblocks/style_unstable/scrolling.css" />
-	<link rel="stylesheet" href="../libraries/buildingblocks/style_unstable/progress_activity.css" />
+	<link rel="stylesheet" href="../libraries/buildingblocks/style/headers.css">
+	<link rel="stylesheet" href="../libraries/buildingblocks/style/status.css">
+	<link rel="stylesheet" href="../libraries/buildingblocks/style_unstable/lists.css">
+	<link rel="stylesheet" href="../libraries/buildingblocks/style_unstable/scrolling.css">
+	<link rel="stylesheet" href="../libraries/buildingblocks/style_unstable/progress_activity.css">
 
-	<link rel="stylesheet" href="../libraries/buildingblocks/icons/styles/action_icons.css" />
+	<link rel="stylesheet" href="../libraries/buildingblocks/icons/styles/action_icons.css">
 
-	<link rel="stylesheet" href="../libraries/buildingblocks/transitions.css" />
+	<link rel="stylesheet" href="../libraries/buildingblocks/transitions.css">
   
-	<link rel="stylesheet" href="../libraries/buildingblocks/util.css" />
-	<link rel="stylesheet" href="../libraries/buildingblocks/fonts.css" />
+	<link rel="stylesheet" href="../libraries/buildingblocks/util.css">
+	<link rel="stylesheet" href="../libraries/buildingblocks/fonts.css">
 
-	<link rel="stylesheet" href="../libraries/buildingblocks/cross_browser.css" />
+	<link rel="stylesheet" href="../libraries/buildingblocks/cross_browser.css">
 
-	<link rel="stylesheet" href="../libraries/buildingblocks/extra.css" />
+	<link rel="stylesheet" href="../libraries/buildingblocks/extra.css">
 	
-	<link rel="stylesheet" href="../css/icons.css" />
-	<link rel="stylesheet" href="../css/util.css" />
-	<link rel="stylesheet" href="../css/app.css" />
+	<link rel="stylesheet" href="../css/icons.css">
+	<link rel="stylesheet" href="../css/util.css">
+	<link rel="stylesheet" href="../css/app.css">
 	
-	<link rel="prefetch" type="application/l10n" href="../locales/locales.ini" />
+	<link rel="prefetch" type="application/l10n" href="../locales/locales.ini">
 </head>
 <body>
 	<section role="region" id="drawer" class="skin-dark">
@@ -74,7 +74,7 @@
 	
 	<section id="loading" data-position="back" class="shown">
 		<div id="loading-container">
-			<img id="loading-image" src="../images/icon.png" alt="Logo" />
+			<img id="loading-image" src="../images/icon.png" alt="Logo"/>
 			<div id="loading-bar">
 				<progress id="loading-progress" value="0"></progress>
 			</div>
@@ -82,15 +82,14 @@
 		</div>
 	</section>
 
-	<script type="text/javascript" defer src="../libraries/l10n.js"></script>
-	<script type="text/javascript" defer src="../libraries/buildingblocks/js/status.js"></script>
-	<script type="text/javascript" defer src="../js/config.js"></script>
-	<script type="text/javascript" defer src="../js/mime.js"></script>
-	<script type="text/javascript" defer src="../js/util.js"></script>
-	<script type="text/javascript" defer src="../js/files.js"></script>
-	<!--script type="text/javascript" defer src="../js/storage.test.js"></script-->
-	<!--script type="text/javascript" defer src="../js/activity.test.js"></script-->
-	<script type="text/javascript" defer src="../js/folder.js"></script>
+	<script defer src="../libraries/l10n.js"></script>
+	<script defer src="../libraries/buildingblocks/js/status.js"></script>
+	<script defer src="../js/config.js"></script>
+	<script defer src="../js/mime.js"></script>
+	<script defer src="../js/util.js"></script>
+	<script defer src="../js/files.js"></script>
+	<!--script defer src="../js/storage.test.js"></script-->
+	<!--script defer src="../js/activity.test.js"></script-->
+	<script defer src="../js/folder.js"></script>
 </body>
 </html>
-
