--- a/elements/text.html
+++ b/elements/text.html
@@ -2,23 +2,23 @@
 <html lang="en-US">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, user-scalable=no" />
+	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<title>Text Viewer</title>
   
-	<link rel="stylesheet" href="../libraries/buildingblocks/style/headers.css" />
-	<link rel="stylesheet" href="../libraries/buildingblocks/style_unstable/toolbars.css" />
+	<link rel="stylesheet" href="../libraries/buildingblocks/style/headers.css">
+	<link rel="stylesheet" href="../libraries/buildingblocks/style_unstable/toolbars.css">
 
-	<link rel="stylesheet" href="../libraries/buildingblocks/icons/styles/action_icons.css" />
+	<link rel="stylesheet" href="../libraries/buildingblocks/icons/styles/action_icons.css">
   
-	<link rel="stylesheet" href="../libraries/buildingblocks/util.css" />
-	<link rel="stylesheet" href="../libraries/buildingblocks/fonts.css" />
+	<link rel="stylesheet" href="../libraries/buildingblocks/util.css">
+	<link rel="stylesheet" href="../libraries/buildingblocks/fonts.css">
 
 	<link rel="stylesheet" href="../libraries/buildingblocks/cross_browser.css">
 
 	<link rel="stylesheet" href="../libraries/buildingblocks/extra.css">
 	<link rel="stylesheet" href="../css/text.css">
 	
-	<link rel="prefetch" type="application/l10n" href="../locales/locales.ini" />
+	<link rel="prefetch" type="application/l10n" href="../locales/locales.ini">
 </head>
 <body>	
 	<section id="index" data-position="current" class="left-to-current">
@@ -46,10 +46,9 @@
   </section>
   
   
-	<script type="text/javascript" defer src="../libraries/l10n.js"></script>
+	<script defer src="../libraries/l10n.js"></script>
 	
-	<script type="text/javascript" defer src="../js/storage.js"></script>
-	<script type="text/javascript" defer src="../js/text.js"></script>
+	<script defer src="../js/storage.js"></script>
+	<script defer src="../js/text.js"></script>
 </body>
 </html>
-
